--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
     <title>Sortable list</title>
   </head>
   <body>
-    <h1>10 Richest People</h1>
-    <p>Drag and Drop the items into their corresponding spots</p>
-    <ul class="draggable-list" id="draggable-list"></ul>
-    <button class="check-btn" id="check">
-      Check Order
-      <i class="fas fa-paper-plane"></i>
-    </button>
-
+    <section class="container">
+      <h1 class="title">10 Richest People</h1>
+      <p class="description">
+        Drag and Drop the items into their corresponding spots
+      </p>
+      <ul class="draggable-list" id="draggable-list"></ul>
+      <button class="check-btn" id="check">
+        Check Order
+        <i class="fas fa-paper-plane"></i>
+      </button>
+    </section>
     <script src="./js/script.js"></script>
   </body>
 </html>
